--- a/templates/amonestacion/index.html.twig
+++ b/templates/amonestacion/index.html.twig
@@ -97,20 +97,20 @@
 						<td width="65%"></td>
 						<td width="35%">
 							Fecha:
-							{{amonestacion.fecha|date("d/m/y")}}
+							{{codigo.fecha|date("d/m/y")}}
 						</td>
 					</tr>
 					<tr>
 						<td></td>
 						<td>
 							Hora:
-							{{amonestacion.hora|date("H:i")}}
+							{{codigo.hora|date("H:i")}}
 						</td>
 					</tr>
 					<tr>
 						<td colspan="4">
 							Alumno:
-							{{amonestacion.idAlumno}}
+							{{codigo.idAlumno}}
 						</td>
 					</tr>
 
@@ -124,80 +124,80 @@
 							<td rowspan="9" class="tit" width="50%">
 								Alterar la convivencia y/o el normal desarrollo de la vida en la residencia
 							</td>
-							<td class="chk" style="" >{% if amonestacion.isResiAbandonarCentro %} <b>X</b>{% endif %}</td>
+							<td class="chk" style="" >{% if codigo.isResiAbandonarCentro %} <b>X</b>{% endif %}</td>
 							<td class="opcion">Abandonar el centro sin permiso previo</td>
 						</tr>
 						<tr>
-							<td class="chk"> {% if amonestacion.isResiFaltaClasePermaneciendoResidencia %}<b>X</b>{% endif %}</td>
+							<td class="chk"> {% if codigo.isResiFaltaClasePermaneciendoResidencia %}<b>X</b>{% endif %}</td>
 							<td class="opcion">Faltas injustificadas a clases permaneciendo en Residencia</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isResiIncumplimientoPlanConvivencia %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isResiIncumplimientoPlanConvivencia %}<b>X</b>{% endif %} </td>
 							<td class="opcion">Incumplimiento del plan de convivencia</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isResiFaltaControlPresencia %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isResiFaltaControlPresencia %}<b>X</b>{% endif %} </td>
 							<td class="opcion">Falta no justificada en los controles de presencia</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isResiNegativaIndicacion %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isResiNegativaIndicacion %}<b>X</b>{% endif %} </td>
 							<td class="opcion">Negativa a cumplir una indicación</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isResiNegativaSancion %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isResiNegativaSancion %}<b>X</b>{% endif %} </td>
 							<td class="opcion">Negativa a cumplir una sanción</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isResiFumar %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isResiFumar %}<b>X</b>{% endif %} </td>
 							<td class="opcion">Fumar dentro del centro</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isResiHabitacionHorarioEscolar %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isResiHabitacionHorarioEscolar %}<b>X</b>{% endif %} </td>
 							<td class="opcion">Permanecer en la habitación en horario escolar</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isResiOtros %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isResiOtros %}<b>X</b>{% endif %} </td>
 							<td class="opcion">Otros (Explicad en Observaciones)</td>
 						</tr>
 						<tr>
 							<td rowspan="6" class="tex tit fs-5 ">
 								Alterar la convivencia y el normal desarrollo de la vida en el módulo</td>
-							<td class="chk"> {% if amonestacion.isModuloEstanciaModuloAjeno %}<b>X</b>{% endif %}
+							<td class="chk"> {% if codigo.isModuloEstanciaModuloAjeno %}<b>X</b>{% endif %}
 							</td>
 							<td class="opcion">
 								Estancia sin permiso en módulo ajeno
 							</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isModuloAusenciaPasarLista %}<b>X</b>{% endif %} 
+							<td class="chk">{% if codigo.isModuloAusenciaPasarLista %}<b>X</b>{% endif %} 
 							</td>
 							<td class="opcion">
 								Ausencia a la hora de pasar lista
 							</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isModuloDesorden %}<b>X</b>{% endif %} 
+							<td class="chk">{% if codigo.isModuloDesorden %}<b>X</b>{% endif %} 
 							</td>
 							<td class="opcion">
 								Desorden en módulo
 							</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isModuloTenenciaElectrodomesticos %}<b>X</b>{% endif %} 
+							<td class="chk">{% if codigo.isModuloTenenciaElectrodomesticos %}<b>X</b>{% endif %} 
 							</td>
 							<td class="opcion">
 								Tendencia de aparatos electrodomésticos no permitidos
 							</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isModuloIndebidoAparato %}<b>X</b>{% endif %} 
+							<td class="chk">{% if codigo.isModuloIndebidoAparato %}<b>X</b>{% endif %} 
 							</td>
 							<td class="opcion">
 								Uso indebido de aparatos (móvil, walkman, cámaras ...)
 							</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isModuloOtros %}<b>X</b>{% endif %} 
+							<td class="chk">{% if codigo.isModuloOtros %}<b>X</b>{% endif %} 
 							</td>
 							<td class="opcion">
 								Otros (Indicad en observaciones)
@@ -213,46 +213,46 @@
 							<td rowspan="6" class="tex fs-5 ">
 								Alterar el normal desarollo del estudio asesorado y las clases de apoyo y/o comportamiento indebido
 							</td>
-							<td class="chk">{% if amonestacion.isEstudioAlterarRetraso %}<b>X</b>{% endif %}</td>
+							<td class="chk">{% if codigo.isEstudioAlterarRetraso %}<b>X</b>{% endif %}</td>
 							<td class="opcion">Retraso al aula</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isEstudioAlterarFalta %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isEstudioAlterarFalta %}<b>X</b>{% endif %} </td>
 							<td class="opcion">Falta no justificada al aula</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isEstudioAlterarRetrasarComienzo %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isEstudioAlterarRetrasarComienzo %}<b>X</b>{% endif %} </td>
 							<td class="opcion">Retrasar el comienzo del estudio</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isEstudioAlterarInterferirDesarrollo %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isEstudioAlterarInterferirDesarrollo %}<b>X</b>{% endif %} </td>
 							<td class="opcion">Interferir en el desarrollo del estudio</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isEstudioAlterarAbandonarAula %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isEstudioAlterarAbandonarAula %}<b>X</b>{% endif %} </td>
 							<td class="opcion">Abandonar el aula sin permiso</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isEstudioAlterarOtros %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isEstudioAlterarOtros %}<b>X</b>{% endif %} </td>
 							<td class="opcion">Otros (Explicad en Observaciones)</td>
 						</tr>
 						<tr>
 							<td rowspan="4" class="tex fs-5 ">
 								No seguir las normas de estudio y/o comportamiento establecidas por el/la educador/a
 							</td>
-							<td class="chk">{% if amonestacion.isEstudioNormasNoTrabaja %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isEstudioNormasNoTrabaja %}<b>X</b>{% endif %} </td>
 							<td class="opcion">No trabaja</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isEstudioNormasNoHaceTareas %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isEstudioNormasNoHaceTareas %}<b>X</b>{% endif %} </td>
 							<td class="opcion">No hace sus tareas</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isEstudioNormasNoTraeMaterial %}<b>X</b>{% endif %} </td>
+							<td class="chk">{% if codigo.isEstudioNormasNoTraeMaterial %}<b>X</b>{% endif %} </td>
 							<td class="opcion">No trae el material</td>
 						</tr>
 						<tr>
-							<td class="chk">{% if amonestacion.isEstudioNormasNoCambiaActitud %}<b>X</b>{% endif %}</td>
+							<td class="chk">{% if codigo.isEstudioNormasNoCambiaActitud %}<b>X</b>{% endif %}</td>
 							<td class="opcion">No cambia de actitud tras indicárselo varias veces</td>
 						</tr>
 
@@ -271,41 +271,41 @@
 						</thead>
 						<tbody style="line-height: 0.5em">
 							<tr>
-								<td class="chk"> {% if amonestacion.isCompaAmenazar %}<b>X</b>{% endif %}</td>
+								<td class="chk"> {% if codigo.isCompaAmenazar %}<b>X</b>{% endif %}</td>
 								<td class="opcion">Amenazar</td>
-								<td class="chk">{% if amonestacion.isEduFaltaRespeto %}<b>X</b>{% endif %} </td>
+								<td class="chk">{% if codigo.isEduFaltaRespeto %}<b>X</b>{% endif %} </td>
 								<td class="opcion">Faltar el respeto</td>
-								<td class="chk">{% if amonestacion.isCentroMaltratoMaterial %}<b>X</b>{% endif %} </td>
+								<td class="chk">{% if codigo.isCentroMaltratoMaterial %}<b>X</b>{% endif %} </td>
 								<td class="opcion">Maltrato del material y/o instalaciones del Centro</td>
 							</tr>
 							<tr>
-								<td class="chk">{% if amonestacion.isCompaFaltaRespeto %}<b>X</b>{% endif %} </td>
+								<td class="chk">{% if codigo.isCompaFaltaRespeto %}<b>X</b>{% endif %} </td>
 								<td class="opcion">Faltar el respeto o insultar</td>
-								<td class="chk">{% if amonestacion.isEduContestar %}<b>X</b>{% endif %} </td>
+								<td class="chk">{% if codigo.isEduContestar %}<b>X</b>{% endif %} </td>
 								<td class="opcion">Contestar indebidamente</td>
-								<td class="chk">{% if amonestacion.isCentroFumar %}<b>X</b>{% endif %} </td>
+								<td class="chk">{% if codigo.isCentroFumar %}<b>X</b>{% endif %} </td>
 								<td class="opcion">Fumar</td>
 							</tr>
 							<tr>
-								<td class="chk">{% if amonestacion.isCompaPegar %}<b>X</b>{% endif %} </td>
+								<td class="chk">{% if codigo.isCompaPegar %}<b>X</b>{% endif %} </td>
 								<td class="opcion">Pegar, empujar, poner zancadillas</td>
-								<td class="chk">{% if amonestacion.isEduTratoIncorrecto %}<b>X</b>{% endif %} </td>
+								<td class="chk">{% if codigo.isEduTratoIncorrecto %}<b>X</b>{% endif %} </td>
 								<td class="opcion">Trato incorrecto</td>
-								<td class="chk">{% if amonestacion.isCentroLugarNoPermitido %}<b>X</b>{% endif %} </td>
+								<td class="chk">{% if codigo.isCentroLugarNoPermitido %}<b>X</b>{% endif %} </td>
 								<td class="opcion">Encontrarse en un lugar no permitido en recreos o en horas lectivas</td>
 							</tr>
 							<tr>
-								<td class="chk">{% if amonestacion.isCompaQuitarMaterial %}<b>X</b>{% endif %} </td>
+								<td class="chk">{% if codigo.isCompaQuitarMaterial %}<b>X</b>{% endif %} </td>
 								<td class="opcion">Quitar, robar ... material</td>
-								<td class="chk">{% if amonestacion.isEduMentir %}<b>X</b>{% endif %} </td>
+								<td class="chk">{% if codigo.isEduMentir %}<b>X</b>{% endif %} </td>
 								<td class="opcion">Mentir, engañar...</td>
-								<td class="chk">{% if amonestacion.isCentroMolestarPasillo %}<b>X</b>{% endif %} </td>
+								<td class="chk">{% if codigo.isCentroMolestarPasillo %}<b>X</b>{% endif %} </td>
 								<td class="opcion">Molestar en los pasillos cuando es expulsado de clase</td>
 							</tr>
 							<tr>
-								<td class="chk">{% if amonestacion.isCompaEncubrimientoFalta %}<b>X</b>{% endif %} </td>
+								<td class="chk">{% if codigo.isCompaEncubrimientoFalta %}<b>X</b>{% endif %} </td>
 								<td class="opcion">Encubrimiento de una falta</td>
-								<td class="chk">{% if amonestacion.isEduUtilizacionDocumentos %}<b>X</b>{% endif %} </td>
+								<td class="chk">{% if codigo.isEduUtilizacionDocumentos %}<b>X</b>{% endif %} </td>
 								<td class="opcion">Utilización indebida de documentos</td>
 								<td></td>
 								<td></td>
@@ -318,21 +318,21 @@
                     <table width="100%" style="padding-top: 3px">
                         <tr style="border-bottom: 0;">
                             <td width="50%" style="border-bottom: 0;"><b style="font-size: 1em">Observaciones</b></td>
-                            <td colspan="2"style="line-height: 1.2em; border-bottom: 0;" >Nombre: {{amonestacion.getIdEducador}}</td>
+                            <td colspan="2"style="line-height: 1.2em; border-bottom: 0;" >Nombre: {{codigo.getIdEducador}}</td>
                         </tr>
                         <tr style="border-bottom: 0; border-top: 0;">
-                            <td rowspan="4" style="border-top: 0;">{{amonestacion.getObservaciones ?? ''}}</td>
+                            <td rowspan="4" style="border-top: 0;">{{codigo.getObservaciones ?? ''}}</td>
                             <td colspan="2" align="center" style="border-bottom: 0; border-top: 0; padding-top: 5px">Firma</td>
                         </tr>
                         <tr style="border-top: 0;">
-                            <td colspan="2" height="60px" valign="bottom" align="left" style="border-top: 0; ">Fdo: {{amonestacion.getIdEducador}}</td>
+                            <td colspan="2" height="60px" valign="bottom" align="left" style="border-top: 0; ">Fdo: {{codigo.getIdEducador}}</td>
                             
                         </tr>
                         <tr style="border-bottom: 0;">
                             <td colspan="2" height="60px"  valign="top" align="center" style="border-bottom: 0; padding-top: 5px">Firma del alumno/a</td>
                         </tr>
                         <tr style="border-top: 0;">
-                            <td class="chk">{% if amonestacion.isFirmaAlumno %} <b>X</b> {% endif %}
+                            <td class="chk">{% if codigo.isFirmaAlumno %} <b>X</b> {% endif %}
                             </td>
                             <td valign="bottom" align="left" style="border-top: 0;">El/La alumno/a se niega a firmar</td>
                         </tr>
@@ -341,7 +341,7 @@
                             <td  colspan="2" rowspan="2" valign="top" align="center" style="padding-top: 5px">Firma del Padre/Madre o Tutor Legal</td>
                         </tr>
                         <tr style="border-top:0;">
-                            <td height="60px" style="border-top:0;">{{amonestacion.getSancion}}</td>
+                            <td height="60px" style="border-top:0;">{{codigo.getSancion}}</td>
 
                         </tr>
                         
