--- a/templates/salida/index.html.twig
+++ b/templates/salida/index.html.twig
@@ -2,9 +2,6 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>
-			{{title}}
-		</title>
 		<link
 		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
@@ -20,25 +17,83 @@
             .container {
                 margin: 1em;
             }
+			main table {
+				position: relative;
+				margin: 0.2em;
+				left: 40px;
+			}
+			.firmado {
+				position: fixed;
+				right: 100px;
+				bottom: 100px;
+			}
 		</style>
 	</head>
 	<body>
 		<div class="container">
 			<header>
-				<table width="100%" style="text-align: center; height: 120px;">
+				<table width="100%" style="text-align: center; height: 90px;">
 					<tr>
 						<td valign="top" style="width:25%">
-							<img src="img/canteras.jpg" style="height: 5em;"/>
+							<img src="img/canteras.jpg" style="height: 4.5em;"/>
 						</td>
 						<td valign="top" style="text-align: center">
 							<h2>{{title}}</h2>
 						</td>
-						<td valign="center" style="width: 25%">
-							<img style="height: 5em" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Logotipo_de_la_Junta_de_Andaluc%C3%ADa_2020.svg/1200px-Logotipo_de_la_Junta_de_Andaluc%C3%ADa_2020.svg.png" class="" alt="">
+						<td valign="center" style="width: 20%">
+							<img style="height: 4em" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Logotipo_de_la_Junta_de_Andaluc%C3%ADa_2020.svg/1200px-Logotipo_de_la_Junta_de_Andaluc%C3%ADa_2020.svg.png" class="" alt="">
 						</td>
 					</tr>
 				</table>
 			</header>
+			<main>
+				<table width="80%" style="line-height: 1.5em">
+					<tr>
+						<td>ALUMNO/A:</td>
+						<td colspan="3">{{salida.getIdAlumno}}</td>
+					</tr>
+					<tr>
+						<td>Fecha:</td>
+						<td >{{salida.getFechaSalida|date('d/m/y')}}</td>
+						<td>Hora de salida:</td>
+						<td>{{salida.getFechaSalida|date('H:i')}}</td>
+					</tr>
+					<tr>
+						<td>Fecha:</td>
+						<td >{{salida.getFechaLlegada|date('d/m/y')}}</td>
+						<td>Hora de salida:</td>
+						<td>{{salida.getFechaLlegada|date('H:i')}}</td>
+					</tr>
+				</table>
+				<br>
+				<table width="80%" style="line-height: 1.5em">
+					<tr>
+						<td colspan="2">Autoriza: (educador/educadora/monitor/monitora)</td>
+					</tr>
+					<tr>
+						<td width="15%">D./Dña.</td>
+						<td width="85%">{{salida.getIdEducador}}</td>
+					</tr>
+				</table>
+
+				<div class="firmado">
+					Firmado
+				</div>
+			</main>
+			<footer style="width: 95%; bottom: 0; position: absolute">
+				<table width="100%" height="30px" style="border-top: 1px solid gray; font-size: 0.7em">
+					<tr>
+						<td>
+							<img style="height:4em" src="img/medidas_personales_1_1.png" class="" alt="">
+						</td>
+
+						<td align="right">
+							<p>INSERTAR SITIO</p>
+							<p>Fecha de Emisión: INSERTAR DATO</p>
+						</td>
+					</tr>
+				</table>
+			</footer>
 		</div>
 	</body>
 </html>
