Boton del index

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -90,6 +90,12 @@
                     <a href="{{ path('permisos_crear')}}" class="btn w-50 btn-outline-primary">
                         Crear Permisos
                     </a>
+					<a href="{{ path('app_habitacion')}}" class="btn w-50 btn-success">
+                        Módulo 20
+                    </a>
+                    <a href="{{ path('habitacion_crear')}}" class="btn w-50 btn-outline-success">
+                        Crear Módulo 20
+                    </a>
                 </div>
             </main>
 			{{ include('persona/dompdf/_footer.html.twig') }}
