--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -94,7 +94,10 @@
                         Módulo 20
                     </a>
                     <a href="{{ path('habitacion_crear')}}" class="btn w-50 btn-outline-success">
-                        Crear Módulo 20
+                        Crear Módulo 20 y Habitaciones con Alumnos
+                    </a>
+					<a href="{{ path('modulo_revision')}}" class="btn w-50 btn-primary">
+                        Revisión de Módulos
                     </a>
                 </div>
             </main>
