Revisión de Módulos en Annotations

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -96,6 +96,9 @@
                     <a href="{{ path('habitacion_crear')}}" class="btn w-50 btn-outline-success">
                         Crear Módulo 20
                     </a>
+					<a href="{{ path('modulo_revision')}}" class="btn w-50 btn-primary">
+                        Revisión de Módulos
+                    </a>
                 </div>
             </main>
 			{{ include('persona/dompdf/_footer.html.twig') }}
